<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="main_title">Welcome to SOPT</string>
    <string name="main_id">ID</string>
    <string name="main_pw">비밀번호</string>
    <string name="main_id_hint">아이디를 입력하세요</string>
    <string name="main_pw_hint">비밀번호를 입력하세요</string>
    <string name="main_login">login</string>
    <string name="main_sign_up">sign up</string>
    <string name="sign_up_hint">이름을 입력하세요</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="sign_up_clear">회원가입 완료</string>
    <string name="sign_up_success">회원가입이 완료되었습니다.</string>
    <string name="sign_up_fail">다시 입력해주세요.</string>
    <string name="main_log_out">자동 로그인 해제</string>
    <string name="home">home</string>
    <string name="place">place</string>
    <string name="profile">profile</string>

    <style name="login_success">로그인에 성공했습니다</style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_followers">Followers</string>
    <string name="login_error_msg">error error error error error</string>
    <string name="music_title">Music</string>
    <string name="post_btn">서버 통신</string>
    <string name="select_img">이미지 선택</string>
</resources>