<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.sopt.sample.ui.login.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/main_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/main_id"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

        <TextView
            android:id="@+id/tv_login_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/main_pw"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/et_login_id"
            app:layout_constraintTop_toBottomOf="@+id/et_login_id" />

        <EditText
            android:id="@+id/et_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@{vm.isIdValid ? @drawable/shape_black_8_line_rect : @drawable/shape_red_8_line_rect}"
            android:hint="@string/main_id_hint"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@={vm.idText}"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_id"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@{vm.isPwValid ? @drawable/shape_black_8_line_rect : @drawable/shape_red_8_line_rect}"
            android:hint="@string/main_pw_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@={vm.pwText}"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_pw"
            tools:layout_editor_absoluteX="31dp" />

        <TextView
            android:id="@+id/tv_login_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_error_msg"
            android:textColor="@color/red"
            android:visibility="@{vm.isPwValid ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@+id/et_login_pw"
            app:layout_constraintTop_toBottomOf="@+id/et_login_pw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@{vm.isLogin ? @color/purple_200 : @color/gray}"
            android:clickable="@{vm.isLogin}"
            android:onClick="@{()->vm.loginOnClick()}"
            android:text="@string/main_login"
            android:textColor="@{vm.isLogin ? @color/black : @color/white}"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_error_msg"
            tools:layout_editor_absoluteX="-16dp" />

        <Button
            android:id="@+id/btn_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/main_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>